@@ -14,15 +14,6 @@ export R_VERSION
 R_OSTYPE="unix"
 export R_OSTYPE
 
-## Add 'share/perl' to the perl library path.
-if test -n "${PERL5LIB}"; then
-  PERL5LIB="${R_SHARE_DIR}/perl:${PERL5LIB}"
-  export PERL5LIB
-else
-  PERLLIB="${R_SHARE_DIR}/perl:${PERLLIB}"
-  export PERLLIB
-fi
-
 ## Append 'share/texmf/...' to TeX's input search path.
 if test -z "${TEXINPUTS}"; then
   TEXINPUTS=".:${R_SHARE_DIR}/texmf/tex/latex:"
